Fix inline translations (Chrome flex-layout bug)

--- a/src/documents/style/Text/InlineTranslation.styl
+++ b/src/documents/style/Text/InlineTranslation.styl
@@ -1,4 +1,4 @@
-.inline_translation 
+.inline_translation
   @extend .text-reset
   sans_serif()
   font-size 11px
@@ -13,9 +13,11 @@
   font-weight normal
   -webkit-font-smoothing subpixel-antialiased
   // bottom: 26px
-  //display block
-  //position: absolute;
-  //top: 0;
+  display block
+  position: absolute;
+  top: 0;
+  margin-top -4px
+  //display none
 
-[no-assist] .inline_translation 
+[no-assist] .inline_translation
   display none
